# BitmapExtract

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make
